Dataset is obtained

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ googletrans = "3.1.0a0"
 facebook-sdk = "^3.1.0"
 networkx = "^2.6.3"
 matplotlib = "^3.4.3"
+torch = "^1.10.1"
+torch-sparse = "^0.6.12"
+torch-scatter = "^2.0.9"
+torch-geometric = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 
